chore: finalize project implementation and updates